// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`function footer adds the generated footer to the end of the file contents 1`] = `
"export function fibonacci(num) {
  if (num > 1) {
    return fibonacci(num - 1) + fibonacci(num - 2)
  }

  return 1
}

👣👣👣 - fibonacci.js"
`;

exports[`string footer adds the provided string to the end of the file contents 1`] = `
"export function fibonacci(num) {
  if (num > 1) {
    return fibonacci(num - 1) + fibonacci(num - 2)
  }

  return 1
}

👣👣👣"
`;
